chore: fixed Homepage reviews and  Meta-Blog [alignment and image sizes]

--- a/themes/timer-hugo/assets/css/style.css
+++ b/themes/timer-hugo/assets/css/style.css
@@ -75,8 +75,8 @@ code {
   width: 75%;
   max-width: 767px;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto; */
+  /* margin-right: auto; */
 }
 
 @media (max-width: 767px) {
@@ -264,12 +264,16 @@ a:hover {
 }
 
 .global-page-header {
+  height: 40vh;
   background-attachment: fixed;
   background-size: cover;
   padding: 120px 0 25px 0;
   position: relative;
   background: #6cba74;
   color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .global-page-header h2 {
@@ -1115,6 +1119,10 @@ article {
 
 .single-post {
   padding: 80px 0 20px;
+}
+
+.post-img {
+  width: 300px;
 }
 
 .single-post .post-content {
